--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,108 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{dai2014accelerate,
+  title={Accelerate bilateral filter using Hermite polynomials},
+  author={Dai, Longquan and Yuan, Mengke and Zhang, Xiaopeng},
+  journal={Electronics Letters},
+  volume={50},
+  number={20},
+  pages={1432--1434},
+  year={2014},
+  publisher={The Institution of Engineering and Technology}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
+@article{dai2016speeding,
+  title={Speeding up the bilateral filter: A joint acceleration way},
+  author={Dai, Longquan and Yuan, Mengke and Zhang, Xiaopeng},
+  journal={IEEE Transactions on Image Processing},
+  volume={25},
   number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+  pages={2657--2672},
+  year={2016},
+  publisher={IEEE}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+@article{dai2015optimal,
+  title={Optimal fitting polynomial for linear time bilateral filters},
+  author={Dai, Longquan and Yuan, Mengke and Zhang, Xiaopeng},
+  journal={Electronics Letters},
+  volume={51},
+  number={16},
+  pages={1249--1251},
+  year={2015},
+  publisher={IET}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{dai2015fully,
+  title={Fully connected guided image filtering},
+  author={Dai, Longquan and Yuan, Mengke and Zhang, Feihu and Zhang, Xiaopeng},
+  booktitle={Proceedings of the IEEE International Conference on Computer Vision},
+  pages={352--360},
+  year={2015}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{dai2017hardware,
+  title={Hardware-efficient guided image filtering for multi-label problem},
+  author={Dai, Longquan and Yuan, Mengke and Li, Zechao and Zhang, Xiaopeng and Tang, Jinhui},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={5325--5333},
+  year={2017}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{yuan2018bilateral,
+  title={Bilateral filter acceleration based on weighted variable projection},
+  author={Yuan, Mengke and Zhang, Xiaopeng},
+  journal={Electronics Letters},
+  volume={54},
+  number={6},
+  pages={352--353},
+  year={2018},
+  publisher={The Institution of Engineering and Technology}
+}
+
+@article{dai2018interpreting,
+  title={Interpreting and extending the guided filter via cyclic coordinate descent},
+  author={Dai, Longquan and Yuan, Mengke and Tang, Liang and Xie, Yuan and Zhang, Xiaopeng and Tang, Jinhui},
+  journal={IEEE Transactions on Image Processing},
+  volume={28},
+  number={2},
+  pages={767--778},
+  year={2018},
+  publisher={IEEE}
+}
+
+@article{yuan2019fast,
+  title={Fast and Error-Bounded Space-Variant Bilateral Filtering},
+  author={Yuan, Meng-Ke and Dai, Long-Quan and Yan, Dong-Ming and Zhang, Li-Qiang and Xiao, Jun and Zhang, Xiao-Peng},
+  journal={Journal of Computer Science and Technology},
+  volume={34},
+  number={3},
+  pages={550--568},
+  year={2019},
+  publisher={Springer US}
+}
+
+@article{yang2020real,
+  title={Real-time facial pose estimation and tracking by coarse-to-fine iterative optimization},
+  author={Yang, Xiaolong and Jia, Xiaohong and Yuan, Mengke and Yan, Dong-Ming},
+  journal={Tsinghua Science and Technology},
+  volume={25},
+  number={5},
+  pages={690--700},
+  year={2020},
+  publisher={TUP}
+}
+
+@incollection{pang2020reflection,
+  title={Reflection Removal via Realistic Training Data Generation},
+  author={Pang, Youxin and Yuan, Mengke and Fu, Qiang and Yan, Dong-Ming},
+  booktitle={ACM SIGGRAPH 2020 Posters},
+  pages={1--2},
+  year={2020}
+}
+
+@article{li2021tensor,
+  title={Tensor-Based Reliable Multiview Similarity Learning for Robust Spectral Clustering on Uncertain Data},
+  author={Li, Ao and Chen, Jiajia and Chen, Deyun and Yu, Xiaoyang and Yuan, Mengke and Xu, Shibiao and Sun, Guanglu},
+  journal={IEEE Transactions on Reliability},
+  year={2021},
+  publisher={IEEE}
 }
